--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^17.1.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.2",
     "nodemon": "^3.1.10"
   }
 }
